# flask-graphql-blog-api

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ruff.yml
dockerfiles/: Dockerfile.dev  docker-compose.dev.yml
migrations/: env.py
src/: app.py  setup_db.py
src/app/: __init__.py  config.py  extensions.py
src/app/api/: __init__.py  graphql_view.py
src/app/models/: __init__.py  base.py  post.py  user.py
src/app/schemas/: __init__.py  schema.py  types.py
src/app/services/: __init__.py  auth_service.py  post_service.py
